feat: adding register users from auth0 endpoint
